@startuml

class Guitar {
- String serialNumber
- double price
- Builder builder
- String model
- Type type
- Wood backWood
- Wood topWood
+ Guitar(String serialNumber, double price, Builder builder,
String model, Type type, Wood backWood, Wood topWood)
+ getSerialNumber(): String
+ getPrice(): double
+setPrice(double)
}

class GuitarSpec {
- Builder builder
- String model
- Type type
- int numStrings
- Wood backWood
- Wood topWood
+ getBuilder(): Builder
+ getModel(): String
+ getType(): Type
+ getNumStrings(): int
+ getBackWood(): Wood
+ getTopWood(): Wood
}

class Inventory {
- List guitars
+ getGuitar(String serialNumber): Guitar
+ search(Guitar searchGuitar): Guitar
+ Inventory()
+ addGuitar(String serialNumber, double price, Builder builder,
String model, Type type, Wood backWood, Wood topWood)
}



enum Wood {
 CEDAR
 MAHOGANY
 ALDER
}

enum Strings {
 SIX
 TWELVE
}

enum Type {
 ACOUSTIC
 ELECTRIC
}

enum Builder {
 FENDER
 GIBSON
 MARTIN
 COLLINGS
}
GuitarSpec <|-- "0..* " Guitar : Has a
Guitar --o Inventory : contains



@enduml